[VR] Disable voice input when page is capturing audio

Voice input disabled when one of the tabs is capturing autio.

BUG=804362

Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I9b80889a93d17bedb16b90c6ef8c3a3ae5e01da8