chrome/browser/vr/model/capturing_state_model.h
@@ -2,12 +2,12 @@
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
-#ifndef CHROME_BROWSER_VR_MODEL_PERMISSIONS_MODEL_H_
-#define CHROME_BROWSER_VR_MODEL_PERMISSIONS_MODEL_H_
+#ifndef CHROME_BROWSER_VR_MODEL_CAPTURING_STATE_MODEL_H_
+#define CHROME_BROWSER_VR_MODEL_CAPTURING_STATE_MODEL_H_
 
 namespace vr {
 
-struct PermissionsModel {
+struct CapturingStateModel {
   bool audio_capture_enabled = false;
   bool video_capture_enabled = false;
   bool screen_capture_enabled = false;
@@ -17,4 +17,4 @@ struct PermissionsModel {
 
 }  // namespace vr
 
-#endif  // CHROME_BROWSER_VR_MODEL_PERMISSIONS_MODEL_H_
+#endif  // CHROME_BROWSER_VR_MODEL_CAPTURING_STATE_MODEL_H_
